linking front to back data/add post action

--- a/views/templates/datacycles/newdata.ejs
+++ b/views/templates/datacycles/newdata.ejs
@@ -5,7 +5,8 @@
       </div>
       <form
         class="w3-container form_margin w3-animate-bottom"
-        action="/"
+        method="POST"
+        action="/data/add"
       >
         <label class="w3-text-teal form_margin"><b>Website Name</b></label>
         <input
