data storage setup --> next before display data refactor if possible --> then move to display data on table form decrypted

--- a/views/templates/datacycles/newdata.ejs
+++ b/views/templates/datacycles/newdata.ejs
@@ -12,7 +12,7 @@
         <input
           class="w3-input w3-border w3-light-grey form_margin"
           type="text"
-          name="web_name"
+          name="web_title"
           placeholder="Website Name"
         />
         <label class="w3-text-teal form_margin"><b>Website URL</b></label>
