refactoring to new tech stack node-rsa solution works --> next : refactore code and clean repo files and directoris

--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,15 @@
 .form_margin {
   margin: 1rem 0;
 }
+.padd_top_mid{
+  padding-top: 4rem;
+}
 .padd_top_long {
   padding-top: 8rem;
+}
+.pointer{
+  cursor: pointer;
+}
+.no_list_bullet{
+  list-style: none;
 }
