--- a/views/templates/datacycles/newdata.ejs
+++ b/views/templates/datacycles/newdata.ejs
@@ -1,4 +1,4 @@
-<div class="w3-sand padd_top_long" style="width: 100%; height: 100vh">
+<div class="w3-sand padd_top_long hero_container">
     <div class="w3-content w3-white form_length_50 w3-animate-bottom">
       <div class="w3-container w3-teal w3-animate-bottom">
         <h2>New Data entry</h2>
