--- a/views/templates/landing/hero.ejs
+++ b/views/templates/landing/hero.ejs
@@ -1,4 +1,4 @@
-<div class="w3-sand" style="width: 100%; height: 100vh">
+<div class="w3-sand hero_container">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white w3-wide">
           <% if (nav.local === 'home') { %>
